// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarChip /> should render default chip 1`] = `
<DocumentFragment>
  <div
    class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1um87if-MuiChip-root"
  >
    <div
      class="css-1b95bp6"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter css-1fgr4o0-MuiTypography-root"
      >
        U
      </h4>
    </div>
    <span
      class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-mid2jm-MuiTypography-root"
      >
        username
      </p>
    </span>
  </div>
</DocumentFragment>
`;

exports[`<AvatarChip /> should render medium chip 1`] = `
<DocumentFragment>
  <div
    class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-13lcbqs-MuiChip-root"
  >
    <div
      class="css-1b95bp6"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter css-1fgr4o0-MuiTypography-root"
      >
        U
      </h4>
    </div>
    <span
      class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-z3z6ku-MuiTypography-root"
      >
        username
      </p>
    </span>
  </div>
</DocumentFragment>
`;

exports[`<AvatarChip /> should render outlined chip 1`] = `
<DocumentFragment>
  <div
    class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-12jsgm4-MuiChip-root"
  >
    <div
      class="css-1b95bp6"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter css-1fgr4o0-MuiTypography-root"
      >
        U
      </h4>
    </div>
    <span
      class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-mid2jm-MuiTypography-root"
      >
        username
      </p>
    </span>
  </div>
</DocumentFragment>
`;

exports[`<AvatarChip /> should render small chip 1`] = `
<DocumentFragment>
  <div
    class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-12jsgm4-MuiChip-root"
  >
    <div
      class="css-1b95bp6"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter css-1fgr4o0-MuiTypography-root"
      >
        U
      </h4>
    </div>
    <span
      class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-mid2jm-MuiTypography-root"
      >
        username
      </p>
    </span>
  </div>
</DocumentFragment>
`;

exports[`<AvatarChip /> should render with default avatar 1`] = `
<DocumentFragment>
  <div
    class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-12jsgm4-MuiChip-root"
  >
    <div
      class="css-1b95bp6"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter css-1fgr4o0-MuiTypography-root"
      >
        U
      </h4>
    </div>
    <span
      class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-mid2jm-MuiTypography-root"
      >
        username
      </p>
    </span>
  </div>
</DocumentFragment>
`;

exports[`<AvatarChip /> should render with passed avatar 1`] = `
<DocumentFragment>
  <div
    class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-12jsgm4-MuiChip-root"
  >
    <div
      class="MuiAvatar-root MuiAvatar-circular MuiChip-avatar MuiChip-avatarSmall MuiChip-avatarColorDefault css-1wlk0hk-MuiAvatar-root"
    >
      <img
        alt="username"
        class="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAMLCwgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
      />
    </div>
    <span
      class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-mid2jm-MuiTypography-root"
      >
        username
      </p>
    </span>
  </div>
</DocumentFragment>
`;
